--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT=5000;
+PORT=4000
 DATABASE_URL=postgresql://neondb_owner:npg_cg52WtuxRNzp@ep-old-credit-ahmq4gsj.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 JWT_SECRET=R3f7xA2uP9KkL5sM8nV0ZcQ1WjT6HdYb
 REFRESH_SECRET=s9GmE2QqX4vP8bR1tW6yDkC3hF0nJaU7Lz
